implementando clean architecture